--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     runtimeOnly group: 'org.postgresql', name: 'postgresql', version: '42.2.18'
 
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '3.6.28'
+    testImplementation 'org.mockito:mockito-core:2.7.22'
+    testCompile group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+
 }
 
 gretty {
